test/classes/delete-free/nil-checking/nilcheck-emptied.good
nilcheck-emptied.chpl:8: In function 'bad1':
nilcheck-emptied.chpl:11: error: use of nil variable
nilcheck-emptied.chpl:15: In function 'bad2':
nilcheck-emptied.chpl:18: error: use of nil variable
nilcheck-emptied.chpl:22: In function 'bad3':
nilcheck-emptied.chpl:25: error: use of nil variable
